--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/images/ambuja.jpg":["assets/images/ambuja.jpg"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/images/ambuja.jpg":["assets/images/ambuja.jpg"],"assets/images/home-right.png":["assets/images/home-right.png"]}
