--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   provider: ^4.3.2+2
   url_launcher: ^5.7.10
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
