--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^4.3.2+2
   url_launcher: ^5.7.10
   intl: ^0.16.1
+  timeline_tile: 2.0.0
 
 dev_dependencies:
   flutter_test:
